force-app/main/default/objects/Account/fields/Acquisition_Marker__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Marker__c</fullName>
    <label>Acquisition Marker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Acquisition_Marker</valueSetName>
    </valueSet>
</CustomField>