force-app/main/default/objects/Account/fields/Acquisitions__c.field-meta.xml
<CustomField>
    <fullName>Acquisitions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acquisitions</label>
    <type>Checkbox</type>
</CustomField>