force-app/main/default/objects/Account/fields/Actively_Hiring__c.field-meta.xml
<CustomField>
    <fullName>Actively_Hiring__c</fullName>
    <label>Actively Hiring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>