force-app/main/default/objects/Account/fields/Amount_in_Latest_Fundraise__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Latest_Fundraise__c</fullName>
    <label>Amount in Latest Fundraise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>