force-app/main/default/objects/Account/fields/Amount_Raised_GBP__c.field-meta.xml
<CustomField>
    <fullName>Amount_Raised_GBP__c</fullName>
    <label>Amount Raised GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>