force-app/main/default/objects/Account/fields/Amount_Received_GBP__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_GBP__c</fullName>
    <label>Amount Received GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>