force-app/main/default/objects/Account/fields/Audit_Categories__c.field-meta.xml
<CustomField>
    <fullName>Audit_Categories__c</fullName>
    <label>Audit Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Audit_Categories</valueSetName>
    </valueSet>
</CustomField>