force-app/main/default/objects/Account/fields/Audit_Client__c.field-meta.xml
<CustomField>
    <fullName>Audit_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Client</label>
    <type>Checkbox</type>
</CustomField>