force-app/main/default/objects/Account/fields/Audit_Fees__c.field-meta.xml
<CustomField>
    <fullName>Audit_Fees__c</fullName>
    <label>Audit Fees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>