force-app/main/default/objects/Account/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <label>Auditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>