force-app/main/default/objects/Account/fields/B2C__c.field-meta.xml
<CustomField>
    <fullName>B2C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2C</label>
    <type>Checkbox</type>
</CustomField>