force-app/main/default/objects/Account/fields/BD__c.field-meta.xml
<CustomField>
    <fullName>BD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>