force-app/main/default/objects/Account/fields/Beauhurst_Url__c.field-meta.xml
<CustomField>
    <fullName>Beauhurst_Url__c</fullName>
    <label>Beauhurst Url</label>
    <type>Url</type>
</CustomField>