force-app/main/default/objects/Account/fields/BH_Collection_Name__c.field-meta.xml
<CustomField>
    <fullName>BH_Collection_Name__c</fullName>
    <description>BH_Collection_Name</description>
    <label>BH Collection Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>