force-app/main/default/objects/Account/fields/Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to bypass the validation rule for this record</description>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>