force-app/main/default/objects/Account/fields/CCH_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>CCH_Client_Code__c</fullName>
    <label>CCH Client Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>