force-app/main/default/objects/Account/fields/cer_Account_Trading_Currency__c.field-meta.xml
<CustomField>
    <fullName>cer_Account_Trading_Currency__c</fullName>
    <description>Used to be populated by onboarding team</description>
    <label>Account Trading Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>