force-app/main/default/objects/Account/fields/cer_Chasing_Notes__c.field-meta.xml
<CustomField>
    <fullName>cer_Chasing_Notes__c</fullName>
    <label>Chasing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>