force-app/main/default/objects/Account/fields/cer_Chasing_Notes_Date__c.field-meta.xml
<CustomField>
    <fullName>cer_Chasing_Notes_Date__c</fullName>
    <label>Chasing Notes Date</label>
    <type>DateTime</type>
</CustomField>