force-app/main/default/objects/Account/fields/cer_Chasing_Notes_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>cer_Chasing_Notes_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chasing Notes Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>