force-app/main/default/objects/Account/fields/cer_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>cer_Invoice_Email__c</fullName>
    <description>Used to be populated by onboarding team</description>
    <label>Invoice Email</label>
    <type>Email</type>
</CustomField>