force-app/main/default/objects/Account/fields/cer_Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>cer_Tax_Status__c</fullName>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>EC Registered</fullName>
            </value>
            <value>
                <fullName>EC Non-registered</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>