force-app/main/default/objects/Account/fields/CH_Accounts_Next_Due__c.field-meta.xml
<CustomField>
    <fullName>CH_Accounts_Next_Due__c</fullName>
    <label>CH Accounts Next Due</label>
    <type>Date</type>
</CustomField>