force-app/main/default/objects/Account/fields/CH_Address__c.field-meta.xml
<CustomField>
    <fullName>CH_Address__c</fullName>
    <label>CH Address</label>
    <type>Address</type>
</CustomField>