force-app/main/default/objects/Account/fields/CH_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>CH_Company_Type__c</fullName>
    <label>CH Company Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>