force-app/main/default/objects/Account/fields/CH_Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>CH_Incorporation_Date__c</fullName>
    <label>CH Incorporation Date</label>
    <type>Date</type>
</CustomField>