force-app/main/default/objects/Account/fields/CH_Name__c.field-meta.xml
<CustomField>
    <fullName>CH_Name__c</fullName>
    <label>CH Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>