force-app/main/default/objects/Account/fields/CH_SIC_Codes__c.field-meta.xml
<CustomField>
    <fullName>CH_SIC_Codes__c</fullName>
    <label>CH SIC Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>