force-app/main/default/objects/Account/fields/CH_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CH_Year_End_Date__c</fullName>
    <label>CH Year End Date</label>
    <type>Date</type>
</CustomField>