force-app/main/default/objects/Account/fields/Client_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Client_Lost_Reason__c</fullName>
    <label>Client Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetName>Client_Lost_Reason</valueSetName>
    </valueSet>
</CustomField>