force-app/main/default/objects/Account/fields/Client_VAT_number__c.field-meta.xml
<CustomField>
    <fullName>Client_VAT_number__c</fullName>
    <label>Client VAT number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>