force-app/main/default/objects/Account/fields/Companies_House_Data_Last_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Companies_House_Data_Last_Updated_On__c</fullName>
    <label>Companies House Data Last Updated On</label>
    <type>Date</type>
</CustomField>