force-app/main/default/objects/Account/fields/Companies_House_Id__c.field-meta.xml
<CustomField>
    <fullName>Companies_House_Id__c</fullName>
    <label>Companies House Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>