force-app/main/default/objects/Account/fields/Companies_House_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Companies_House_Run_Date__c</fullName>
    <label>Companies House Run Date</label>
    <type>Date</type>
</CustomField>