force-app/main/default/objects/Account/fields/Company_Activity__c.field-meta.xml
<CustomField>
    <fullName>Company_Activity__c</fullName>
    <label>Company Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>