force-app/main/default/objects/Account/fields/Company_registration_number__c.field-meta.xml
<CustomField>
    <fullName>Company_registration_number__c</fullName>
    <label>Company registration number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>