force-app/main/default/objects/Account/fields/Competitor_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Incumbent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor / Incumbent</label>
    <referenceTo>Associations__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>