force-app/main/default/objects/Account/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidential?</label>
    <type>Checkbox</type>
</CustomField>