force-app/main/default/objects/Account/fields/Confidential_Account_Area__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Account_Area__c</fullName>
    <label>Confidential Account Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CP Law</fullName>
            </value>
            <value>
                <fullName>UHNWI</fullName>
            </value>
            <value>
                <fullName>Sports and Media</fullName>
            </value>
            <value>
                <fullName>Ring Fenced</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>