force-app/main/default/objects/Account/fields/Connector__c.field-meta.xml
<CustomField>
    <fullName>Connector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connector</label>
    <type>Checkbox</type>
</CustomField>