force-app/main/default/objects/Account/fields/Connector_Type__c.field-meta.xml
<CustomField>
    <fullName>Connector_Type__c</fullName>
    <label>Connector Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Member Organisation</fullName>
            </value>
            <value>
                <fullName>Other Accountancy</fullName>
            </value>
            <value>
                <fullName>PE House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>