force-app/main/default/objects/Account/fields/Corporate_Finance_Note__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Finance_Note__c</fullName>
    <label>Corporate Finance Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>