force-app/main/default/objects/Account/fields/Corporate_Status__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Status__c</fullName>
    <label>Corporate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent Company</fullName>
            </value>
            <value>
                <fullName>Intermediate Parent</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Ultimate Parent</fullName>
            </value>
            <value>
                <fullName>Private Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>