force-app/main/default/objects/Account/fields/CP_Advisory_Approval__c.field-meta.xml
<CustomField>
    <fullName>CP_Advisory_Approval__c</fullName>
    <label>CP Advisory Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>