force-app/main/default/objects/Account/fields/CP_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_Client_ID__c</fullName>
    <formula>&quot;CP - &quot; &amp; RIGHT(Id, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Client ID</label>
    <type>Text</type>
</CustomField>