force-app/main/default/objects/Account/fields/CP_Deal_Sector__c.field-meta.xml
<CustomField>
    <fullName>CP_Deal_Sector__c</fullName>
    <label>CP Deal Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>