force-app/main/default/objects/Account/fields/CP_Deals_Sector__c.field-meta.xml
<CustomField>
    <fullName>CP_Deals_Sector__c</fullName>
    <label>CP Deals Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_Deals</valueSetName>
    </valueSet>
</CustomField>