force-app/main/default/objects/Account/fields/CP_Deals_Subsector__c.field-meta.xml
<CustomField>
    <fullName>CP_Deals_Subsector__c</fullName>
    <label>CP Deals Subsector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CP_Deals_Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CP_Deals_Subsector</valueSetName>
    </valueSet>
</CustomField>