force-app/main/default/objects/Account/fields/CT_Account_access__c.field-meta.xml
<CustomField>
    <fullName>CT_Account_access__c</fullName>
    <label>Account access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public access</fullName>
                <default>true</default>
                <label>Public access</label>
            </value>
            <value>
                <fullName>Public access with restrictions</fullName>
            </value>
            <value>
                <fullName>VIP Account</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>