force-app/main/default/objects/Account/fields/CT_Finance_Hold__c.field-meta.xml
<CustomField>
    <fullName>CT_Finance_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Hold</label>
    <type>Checkbox</type>
</CustomField>