force-app/main/default/objects/Account/fields/Data_Origination_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Data_Origination_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Origination</label>
    <referenceTo>Data_Origination__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>