force-app/main/default/objects/Account/fields/Date_became_client__c.field-meta.xml
<CustomField>
    <fullName>Date_became_client__c</fullName>
    <label>Date Became Client</label>
    <type>Date</type>
</CustomField>