force-app/main/default/objects/Account/fields/Date_Discovery_Session_Took_Place__c.field-meta.xml
<CustomField>
    <fullName>Date_Discovery_Session_Took_Place__c</fullName>
    <label>Date Discovery Session Took Place</label>
    <type>Date</type>
</CustomField>