force-app/main/default/objects/Account/fields/Date_of_Creation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Creation__c</fullName>
    <label>Date of Creation</label>
    <type>Date</type>
</CustomField>