force-app/main/default/objects/Account/fields/Date_Of_Last_Funding_Round__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Last_Funding_Round__c</fullName>
    <label>Date Of Last Funding Round</label>
    <type>Date</type>
</CustomField>