force-app/main/default/objects/Account/fields/Discovery_Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Meeting_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Meeting Booked</label>
    <type>Checkbox</type>
</CustomField>