force-app/main/default/objects/Account/fields/Discovery_Output_Date_Sent_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Output_Date_Sent_to_Client__c</fullName>
    <label>Discovery Output Date Sent to Client</label>
    <type>Date</type>
</CustomField>