force-app/main/default/objects/Account/fields/Do_Not_Create_Case__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Create Case</label>
    <type>Checkbox</type>
</CustomField>