force-app/main/default/objects/Account/fields/Exit_Planning__c.field-meta.xml
<CustomField>
    <fullName>Exit_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit Planning</label>
    <type>Checkbox</type>
</CustomField>