force-app/main/default/objects/Account/fields/Fee_Email__c.field-meta.xml
<CustomField>
    <fullName>Fee_Email__c</fullName>
    <label>Fee Email</label>
    <type>Email</type>
</CustomField>