force-app/main/default/objects/Account/fields/Fee_Insurance_Taken__c.field-meta.xml
<CustomField>
    <fullName>Fee_Insurance_Taken__c</fullName>
    <label>Fee Insurance Taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>