force-app/main/default/objects/Account/fields/Filing_Description__c.field-meta.xml
<CustomField>
    <fullName>Filing_Description__c</fullName>
    <label>Filing Description</label>
    <type>TextArea</type>
</CustomField>