force-app/main/default/objects/Account/fields/First_Meeting_On__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_On__c</fullName>
    <label>First Meeting On</label>
    <type>Date</type>
</CustomField>