force-app/main/default/objects/Account/fields/Founder_Female_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Founder_Female_Percentage__c</fullName>
    <label>Founder Female Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>