force-app/main/default/objects/Account/fields/Funding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Funding_Stage__c</fullName>
    <label>Funding Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Series B</fullName>
            </value>
            <value>
                <fullName>Series C</fullName>
            </value>
            <value>
                <fullName>Series D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>