force-app/main/default/objects/Account/fields/Grant_Id__c.field-meta.xml
<CustomField>
    <fullName>Grant_Id__c</fullName>
    <label>Grant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>