force-app/main/default/objects/Account/fields/Granting_Body__c.field-meta.xml
<CustomField>
    <fullName>Granting_Body__c</fullName>
    <label>Granting Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>