force-app/main/default/objects/Account/fields/Incorporated_From__c.field-meta.xml
<CustomField>
    <fullName>Incorporated_From__c</fullName>
    <label>Incorporated From</label>
    <type>Date</type>
</CustomField>