force-app/main/default/objects/Account/fields/Incorporated_To__c.field-meta.xml
<CustomField>
    <fullName>Incorporated_To__c</fullName>
    <label>Incorporated To</label>
    <type>Date</type>
</CustomField>