force-app/main/default/objects/Account/fields/Innovation__c.field-meta.xml
<CustomField>
    <fullName>Innovation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Innovation</label>
    <type>Checkbox</type>
</CustomField>