force-app/main/default/objects/Account/fields/International__c.field-meta.xml
<CustomField>
    <fullName>International__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International</label>
    <type>Checkbox</type>
</CustomField>