force-app/main/default/objects/Account/fields/International_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>International_Firm_Name__c</fullName>
    <label>International Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>