force-app/main/default/objects/Account/fields/Is_Announced__c.field-meta.xml
<CustomField>
    <fullName>Is_Announced__c</fullName>
    <label>Is Announced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>