force-app/main/default/objects/Account/fields/Is_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Is_Onboarded__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Onboarded</label>
    <type>Checkbox</type>
</CustomField>