force-app/main/default/objects/Account/fields/Item_Index__c.field-meta.xml
<CustomField>
    <fullName>Item_Index__c</fullName>
    <label>Item Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>