force-app/main/default/objects/Account/fields/Last_Client_Service_Review_CSR__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Service_Review_CSR__c</fullName>
    <label>Last Client Service Review (CSR)</label>
    <type>Date</type>
</CustomField>