force-app/main/default/objects/Account/fields/Latest_Stage_Of_Evolution__c.field-meta.xml
<CustomField>
    <fullName>Latest_Stage_Of_Evolution__c</fullName>
    <label>Latest Stage Of Evolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>