force-app/main/default/objects/Account/fields/Lawyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lawyer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Lawyer Name)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>