force-app/main/default/objects/Account/fields/Legacy_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_ID__c</fullName>
    <label>Legacy Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>