force-app/main/default/objects/Account/fields/Linked_Account__c.field-meta.xml
<CustomField>
    <fullName>Linked_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Linked Account)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>